started implementing mobile design. about window is responsive and takes up full screen when opened on mobile. need to work around draggable component preventing closebutton from working:

--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,9 @@ body, html {
   left: 1%;
 
 }
+
+@media only screen and (max-width: 600px) { 
+.text {
+  width: 300px;
+}
+}
