--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,12 +4,40 @@ body {
   font-family: VT323, cursive;
 }
 
+
 .email {
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  
 }
 
-.call {
+.email-icon {
+  height: 15px;
+  width: 24px;
+  padding-left: 2px;
+}
+
+.discord {
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.discord-icon {
+  height: 20px;
+  width: 20px;
+  margin-top: 20px;
+  padding: 5px;
+}
+
+@media (width <= 768px) and (height <=1023px) { 
+
 }
 
 
