--- a/src/components/Window/AboutWindow.css
+++ b/src/components/Window/AboutWindow.css
@@ -89,3 +89,47 @@
   height: 100%;
   width: 100%;
 }
+
+@media only screen and (max-width: 600px) { 
+.about-window {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.tabBody {
+  height: 95vh;
+}
+
+.window-content {
+  height: 82vh;
+}
+
+.panel {
+  height: 75vh;
+}
+
+.avatar {
+  height: 25vh;
+}
+
+.title {
+  margin-top: 0;
+  font-size: 6vh;
+}
+
+.loading {
+  margin-top: 50vh;
+  height: 35.5vh;
+  width: 30vh;
+}
+
+
+.avatar-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+}
